# Web_Dev_Project

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  powershell_consumer_commands.txt  test.md
.github/workflows/: lint.yml
frontend/frontend_shell/: nginx.conf
frontend/frontend_shell/public/: index.html  shell.js  styles.css
frontend/frontend_shell/public/shared/: cart_log.js  indexeddb_cart.js
frontend/mf_admin/public/: admin.css  admin.js  index.html
frontend/mf_cart/public/: cart.css  cart.js  index.html
frontend/mf_orders/public/: index.html  orders.css  orders.js
services/back/: Dockerfile  README.md  pyproject.toml
services/back/back/: main.py
services/db_service/: Dockerfile  README.md  pyproject.toml
services/db_service/db_service/: img_db.py  main.py  models.py
services/db_service/init_scripts/: init_base.sql
services/orders/: Dockerfile  pyproject.toml
services/orders/orders/: main.py  process_orders.py
services/processor_images/: .dockerignore  Dockerfile  README.md  pyproject.toml
services/processor_images/processor_images/: img_processing.py  main.py
services/scraper/: Dockerfile  README.md  pyproject.toml
services/scraper/scraper/: main.py  scraper.py
utils/: db_manager.py  logger.py
utils/init_scripts/: init_base.sql
