[tool.poetry]
name = "db_service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.6.3"
uvicorn = "^0.27.1"
fastapi = "^0.110.0"
asyncpg = "^0.29.0"

[tool.poetry.scripts]
app = "db_service.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
