[tool.poetry]
name = "scraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
asyncio = "^3.4.3"
aiokafka = "^0.10.0"

[tool.poetry.scripts]
app = "scraper.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
